--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "documents"
   ],
   "author": "Kyle Derby MacInnis",
-  "license": "MPL-2.0",
+  "license": "AGPL-2.0",
   "bugs": {
     "url": "https://github.com/ConflictingTheories/contractJS/issues"
   },
